test/src/e2e_vm_tests/test_programs/should_fail/associated_type_multiple_same_name/src/main.sw
script;

trait ConstantId {
    type T;
    type T;
}

fn main() -> u32 {
  0
}
